# mcbridge

./: .clang-format  .gitignore  .gitmodules  CMakeDeps.cmake  CMakeLists.txt  LICENSE  README.org  b
.github/workflows/: c-cpp.yml
cmake/: safe_dep_glob.cmake
docker/base/: Dockerfile  build  shell
docker/emacs/: Dockerfile  build  emacs  shell
docs/: journal.org
src/: main.cpp
src/client/: Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientConnection.cpp  ClientConnection.h  IGroupSubscriptionMonitor.h  MCastSender.cpp  MCastSender.h  PollingGroupSubscriptionMonitor.cpp  PollingGroupSubscriptionMonitor.h  StaticGroupSubscriptionMonitor.h
src/common/: common.cpp  common.h
src/server/: GroupManager.cpp  GroupManager.h  MCastReceiver.cpp  MCastReceiver.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  ServerConnection.cpp  ServerConnection.h
src/test/: Test.cpp  Test.h
tools/: build.sh  get_includes.sh  get_system_includes.sh  setup_builds.sh
